@@ -1,4 +1,4 @@
-// Copyright 2004-2011 Castle Project - http://www.castleproject.org/
+// Copyright 2004-2012 Castle Project - http://www.castleproject.org/
 // 
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -20,17 +20,13 @@ namespace Castle.MicroKernel.ModelBuilder.Inspectors
 
 	using Castle.Core;
 	using Castle.Core.Internal;
+	using Castle.MicroKernel.Lifestyle.Scoped;
 	using Castle.MicroKernel.SubSystems.Conversion;
 
-	/// <summary>
-	///   Inspects the component configuration and the type looking for a
-	///   definition of lifestyle type. The configuration preceeds whatever
-	///   is defined in the component.
-	/// </summary>
+	/// <summary>Inspects the component configuration and the type looking for a definition of lifestyle type. The configuration preceeds whatever is defined in the component.</summary>
 	/// <remarks>
-	///   This inspector is not guarantee to always set up an lifestyle type. 
-	///   If nothing could be found it wont touch the model. In this case is up to
-	///   the kernel to establish a default lifestyle for components.
+	///     This inspector is not guarantee to always set up an lifestyle type. If nothing could be found it wont touch the model. In this case is up to the kernel to establish a default lifestyle for
+	///     components.
 	/// </remarks>
 	[Serializable]
 	public class LifestyleModelInspector : IContributeComponentModelConstruction
@@ -42,10 +38,7 @@ namespace Castle.MicroKernel.ModelBuilder.Inspectors
 			this.converter = converter;
 		}
 
-		/// <summary>
-		///   Searches for the lifestyle in the configuration and, if unsuccessful
-		///   look for the lifestyle attribute in the implementation type.
-		/// </summary>
+		/// <summary>Searches for the lifestyle in the configuration and, if unsuccessful look for the lifestyle attribute in the implementation type.</summary>
 		public virtual void ProcessModel(IKernel kernel, ComponentModel model)
 		{
 			if (!ReadLifestyleFromConfiguration(model))
@@ -54,22 +47,9 @@ namespace Castle.MicroKernel.ModelBuilder.Inspectors
 			}
 		}
 
-		protected Type ExtractCustomType(ComponentModel model)
-		{
-			var typeNameRaw = model.Configuration.Attributes["customLifestyleType"];
-			if (typeNameRaw == null)
-			{
-				return null;
-			}
-			var lifestyle = converter.PerformConversion<Type>(typeNameRaw);
-			ValidateLifestyleManager(lifestyle);
-			return lifestyle;
-		}
-
 		/// <summary>
-		///   Reads the attribute "lifestyle" associated with the 
-		///   component configuration and tries to convert to <see cref = "LifestyleType" />  
-		///   enum type.
+		///     Reads the attribute "lifestyle" associated with the component configuration and tries to convert to <see cref = "LifestyleType" />
+		///     enum type.
 		/// </summary>
 		protected virtual bool ReadLifestyleFromConfiguration(ComponentModel model)
 		{
@@ -78,46 +58,79 @@ namespace Castle.MicroKernel.ModelBuilder.Inspectors
 				return false;
 			}
 
-			var lifestyle = model.Configuration.Attributes["lifestyle"];
-			if (lifestyle == null)
+			var lifestyleRaw = model.Configuration.Attributes["lifestyle"];
+			if (lifestyleRaw != null)
 			{
-				var customType = ExtractCustomType(model);
-				if (customType != null)
+				var lifestyleType = converter.PerformConversion<LifestyleType>(lifestyleRaw);
+				model.LifestyleType = lifestyleType;
+				switch (lifestyleType)
 				{
-					model.LifestyleType = LifestyleType.Custom;
-					model.CustomLifestyle = customType;
-					return true;
+					case LifestyleType.Singleton:
+					case LifestyleType.Transient:
+					case LifestyleType.PerWebRequest:
+					case LifestyleType.Thread:
+						return true;
+					case LifestyleType.Pooled:
+						ExtractPoolConfig(model);
+						return true;
+					case LifestyleType.Custom:
+						var lifestyle = GetMandatoryTypeFromAttribute(model, "customLifestyleType", lifestyleType);
+						ValidateTypeFromAttribute(lifestyle, typeof(ILifestyleManager), "customLifestyleType");
+						model.CustomLifestyle = lifestyle;
+
+						return true;
+					case LifestyleType.Scoped:
+						var scopeAccessorType = GetTypeFromAttribute(model, "scopeAccessorType");
+						if (scopeAccessorType != null)
+						{
+							ValidateTypeFromAttribute(scopeAccessorType, typeof(IScopeAccessor), "scopeAccessorType");
+							model.ExtendedProperties[Constants.ScopeAccessorType] = scopeAccessorType;
+						}
+						return true;
+					case LifestyleType.Bound:
+						var binderType = GetTypeFromAttribute(model, "scopeRootBinderType");
+						if (binderType != null)
+						{
+							var binder = ExtractBinder(binderType, model.Name);
+							model.ExtendedProperties[Constants.ScopeRootSelector] = binder;
+						}
+						return true;
+					default:
+						throw new InvalidOperationException(string.Format("Component {0} has {1} lifestyle. This is not a valid value.", model.Name, lifestyleType));
 				}
-				var binderType = ExtractBinderType(model);
+			}
+			else
+			{
+				// type was not present, but we might figure out the lifestyle based on presence of some attributes related to some lifestyles
+				var binderType = GetTypeFromAttribute(model, "scopeRootBinderType");
 				if (binderType != null)
 				{
 					var binder = ExtractBinder(binderType, model.Name);
-					model.LifestyleType = LifestyleType.Bound;
 					model.ExtendedProperties[Constants.ScopeRootSelector] = binder;
+					model.LifestyleType = LifestyleType.Bound;
 					return true;
 				}
-				return false;
+				var scopeAccessorType = GetTypeFromAttribute(model, "scopeAccessorType");
+				if (scopeAccessorType != null)
+				{
+					ValidateTypeFromAttribute(scopeAccessorType, typeof(IScopeAccessor), "scopeAccessorType");
+					model.ExtendedProperties[Constants.ScopeAccessorType] = scopeAccessorType;
+					model.LifestyleType = LifestyleType.Scoped;
+					return true;
+				}
+				var customLifestyleType = GetTypeFromAttribute(model, "customLifestyleType");
+				if (customLifestyleType != null)
+				{
+					ValidateTypeFromAttribute(customLifestyleType, typeof(ILifestyleManager), "customLifestyleType");
+					model.CustomLifestyle = customLifestyleType;
+					model.LifestyleType = LifestyleType.Custom;
+					return true;
+				}
 			}
-
-			var type = converter.PerformConversion<LifestyleType>(lifestyle);
-			model.LifestyleType = type;
-
-			if (model.LifestyleType == LifestyleType.Pooled)
-			{
-				ExtractPoolConfig(model);
-			}
-			else if (model.LifestyleType == LifestyleType.Custom)
-			{
-				ExtractCustomConfig(model);
-			}
-
-			return true;
+			return false;
 		}
 
-		/// <summary>
-		///   Check if the type expose one of the lifestyle attributes
-		///   defined in Castle.Model namespace.
-		/// </summary>
+		/// <summary>Check if the type expose one of the lifestyle attributes defined in Castle.Model namespace.</summary>
 		protected virtual void ReadLifestyleFromType(ComponentModel model)
 		{
 			var attributes = model.Implementation.GetAttributes<LifestyleAttribute>();
@@ -131,8 +144,8 @@ namespace Castle.MicroKernel.ModelBuilder.Inspectors
 			if (model.LifestyleType == LifestyleType.Custom)
 			{
 				var custom = (CustomLifestyleAttribute)attribute;
-				ValidateLifestyleManager(custom.LifestyleHandlerType);
-				model.CustomLifestyle = custom.LifestyleHandlerType;
+				ValidateTypeFromAttribute(custom.CustomLifestyleType, typeof(ILifestyleManager), "CustomLifestyleType");
+				model.CustomLifestyle = custom.CustomLifestyleType;
 			}
 			else if (model.LifestyleType == LifestyleType.Pooled)
 			{
@@ -145,25 +158,31 @@ namespace Castle.MicroKernel.ModelBuilder.Inspectors
 				var binder = ExtractBinder(((BoundToAttribute)attribute).ScopeRootBinderType, model.Name);
 				model.ExtendedProperties[Constants.ScopeRootSelector] = binder;
 			}
+			else if (model.LifestyleType == LifestyleType.Scoped)
+			{
+				var scoped = (ScopedAttribute)attribute;
+				if (scoped.ScopeAccessorType != null)
+				{
+					ValidateTypeFromAttribute(scoped.ScopeAccessorType, typeof(IScopeAccessor), "ScopeAccessorType");
+					model.ExtendedProperties[Constants.ScopeAccessorType] = scoped.ScopeAccessorType;
+				}
+			}
 		}
 
-		protected virtual void ValidateLifestyleManager(Type customLifestyleManager)
+		protected virtual void ValidateTypeFromAttribute(Type typeFromAttribute, Type expectedInterface, string attribute)
 		{
-			if (customLifestyleManager.Is<ILifestyleManager>() == false)
+			if (expectedInterface.IsAssignableFrom(typeFromAttribute))
 			{
-				var message =
-					String.Format(
-						"The Type '{0}' specified in the componentActivatorType attribute must implement {1}",
-						customLifestyleManager.FullName, typeof(ILifestyleManager).FullName);
-				throw new InvalidOperationException(message);
+				return;
 			}
+			throw new InvalidOperationException(String.Format("The Type '{0}' specified in the '{2}' attribute must implement {1}", typeFromAttribute.FullName, expectedInterface.FullName, attribute));
 		}
 
 		private Func<IHandler[], IHandler> ExtractBinder(Type scopeRootBinderType, string name)
 		{
 			var filterMethod =
 				scopeRootBinderType.FindMembers(MemberTypes.Method, BindingFlags.Instance | BindingFlags.Public, IsBindMethod, null)
-					.FirstOrDefault();
+				                   .FirstOrDefault();
 			if (filterMethod == null)
 			{
 				throw new InvalidOperationException(
@@ -175,30 +194,6 @@ namespace Castle.MicroKernel.ModelBuilder.Inspectors
 			return
 				(Func<IHandler[], IHandler>)
 				Delegate.CreateDelegate(typeof(Func<IHandler[], IHandler>), instance, (MethodInfo)filterMethod);
-		}
-
-		private Type ExtractBinderType(ComponentModel model)
-		{
-			var typeNameRaw = model.Configuration.Attributes["scopeRootBinderType"];
-			if (typeNameRaw == null)
-			{
-				return null;
-			}
-			return converter.PerformConversion<Type>(typeNameRaw);
-		}
-
-		private void ExtractCustomConfig(ComponentModel model)
-		{
-			var lifestyle = ExtractCustomType(model);
-			if (lifestyle != null)
-			{
-				model.CustomLifestyle = lifestyle;
-			}
-			else
-			{
-				throw new InvalidOperationException(
-					@"The attribute 'customLifestyleType' must be specified in conjunction with the 'lifestyle' attribute set to ""custom"".");
-			}
 		}
 
 		private void ExtractPoolConfig(ComponentModel model)
@@ -216,6 +211,26 @@ namespace Castle.MicroKernel.ModelBuilder.Inspectors
 				var max = converter.PerformConversion<int>(maxRaw);
 				model.ExtendedProperties[ExtendedPropertiesConstants.Pool_MaxPoolSize] = max;
 			}
+		}
+
+		private Type GetMandatoryTypeFromAttribute(ComponentModel model, string attribute, LifestyleType lifestyleType)
+		{
+			var rawAttribute = model.Configuration.Attributes[attribute];
+			if (rawAttribute == null)
+			{
+				throw new InvalidOperationException(string.Format("Component {0} has {1} lifestyle, but its configuration doesn't have mandatory '{2}' attribute.", model.Name, lifestyleType, attribute));
+			}
+			return converter.PerformConversion<Type>(rawAttribute);
+		}
+
+		private Type GetTypeFromAttribute(ComponentModel model, string attribute)
+		{
+			var rawAttribute = model.Configuration.Attributes[attribute];
+			if (rawAttribute == null)
+			{
+				return null;
+			}
+			return converter.PerformConversion<Type>(rawAttribute);
 		}
 
 		private bool IsBindMethod(MemberInfo methodMember, object _)
